4.Hoan thanh du an ( chua bo sung them header sticky)

--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
-      href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@300;400;500;600;700&family=Sora:wght@300;400;500;600;700;800&display=swap"
+      href="https://fonts.googleapis.com/css2?family=Inter:wght@600&family=Open+Sans:wght@300;400;500;600;700&family=Sora:wght@300;400;500;600;700;800&display=swap"
       rel="stylesheet"
     />
     <!-- reset css -->
@@ -93,7 +93,7 @@
     <link rel="stylesheet" href="./assets/css/style.css" />
     <title>Figma3</title>
   </head>
-  <body style="height: 10000px">
+  <body style="height: ">
     <!-- head -->
     <header class="header">
       <div class="main-content">
@@ -260,7 +260,407 @@
           </div>
         </div>
       </section>
-      
+      <!-- work -->
+      <section class="work">
+        <div class="main-content">
+          <h2 class="work-heading section-heading">How it works</h2>
+          <p class="work-desc section-desc">
+            Exceptional dental care for all ages. Your great smile begins with a
+            great dentist.
+          </p>
+          <div class="work-action">
+            <!-- item1 -->
+            <div class="work-item">
+              <a href="#!">
+                <figure class="work-item__img">
+                  <img src="./assets/img/work1.png" alt="" />
+                </figure>
+                <p class="work-item__heading">Search doctor</p>
+                <p class="work-item__desc section-desc">
+                  Search a doctor by education, qualifications or
+                  experience-contact for inquiry.
+                  <a href="#!" class="work-item__foot">
+                    <p class="work-item__foot--desc">Learn More</p>
+                  </a>
+                </p></a
+              >
+            </div>
+            <!-- item2 -->
+            <div class="work-item">
+              <a href="#!">
+                <figure class="work-item__img">
+                  <img src="./assets/img/work2.png" alt="" />
+                </figure>
+                <p class="work-item__heading">Find best doctor</p>
+                <p class="work-item__desc section-desc">
+                  Search a doctor by education, qualifications or
+                  experience-contact for inquiry.
+                  <a href="#!" class="work-item__foot">
+                    <p class="work-item__foot--desc">Learn More</p>
+                  </a>
+                </p></a
+              >
+            </div>
+            <!-- item3 -->
+            <div class="work-item">
+              <a href="#!">
+                <figure class="work-item__img">
+                  <img src="./assets/img/work1.png" alt="" />
+                </figure>
+                <p class="work-item__heading">Get treatment</p>
+                <p class="work-item__desc section-desc">
+                  Search a doctor by education, qualifications or
+                  experience-contact for inquiry.
+                  <a href="#!" class="work-item__foot">
+                    <p class="work-item__foot--desc">Learn More</p>
+                  </a>
+                </p></a
+              >
+            </div>
+          </div>
+        </div>
+      </section>
+      <section class="abt">
+        <div class="main-content">
+          <div class="abt__body">
+            <!-- about us left -->
+            <figure class="abt-picture">
+              <img
+                src="./assets/img/abt1.png"
+                alt=""
+                class="abt-picture__img--large"
+              />
+              <img
+                src="./assets/img/abt2.png"
+                alt=""
+                class="abt-picture__img--small"
+              />
+            </figure>
+            <!-- about us right -->
+            <section class="abt-action">
+              <h2 class="abt-action__heading section-heading">
+                Take back your smile with shine.
+              </h2>
+              <p class="abt-action__desc section-desc">
+                If you’re missing multiple teeth due to decay, injury, or the
+                natural aging process, dentures might be the perfect solution.
+              </p>
+              <a href="#!" class="abt-action__btn btn">Learn More</a>
+            </section>
+          </div>
+        </div>
+      </section>
+      <section class="team">
+        <div class="main-content">
+          <div class="team-heading">
+            <h2 class="section-heading">Our virtual dentist</h2>
+            <a href="#!" class="team-btn btn">Meet our dentist</a>
+          </div>
+          <div class="team-item">
+            <div class="team-card">
+              <a href="#!" class="team-card__active">
+                <div class="team-card__img">
+                  <img
+                    src="./assets/img/team1.png"
+                    alt=""
+                    class="team-card__img--person"
+                  />
+                </div>
+                <p class="team-card__name">Dr. Essence Page</p>
+                <p class="team-card__desc">
+                  DDS, California - Linda University
+                </p>
+              </a>
+            </div>
+            <div class="team-card">
+              <a href="#!" class="team-card__active">
+                <div class="team-card__img">
+                  <img
+                    src="./assets/img/team2.png"
+                    alt=""
+                    class="team-card__img--person"
+                  />
+                </div>
+                <p class="team-card__name">Dr. Essence Page</p>
+                <p class="team-card__desc">
+                  DDS, California - Linda University
+                </p>
+              </a>
+            </div>
+            <div class="team-card">
+              <a href="#!" class="team-card__active">
+                <div class="team-card__img">
+                  <img
+                    src="./assets/img/team3.png"
+                    alt=""
+                    class="team-card__img--person"
+                  />
+                </div>
+                <p class="team-card__name">Dr. Essence Page</p>
+                <p class="team-card__desc">
+                  DDS, California - Linda University
+                </p>
+              </a>
+            </div>
+            <div class="team-card">
+              <a href="#!" class="team-card__active">
+                <div class="team-card__img">
+                  <img
+                    src="./assets/img/team4.png"
+                    alt=""
+                    class="team-card__img--person"
+                  />
+                </div>
+                <p class="team-card__name">Dr. Essence Page</p>
+                <p class="team-card__desc">
+                  DDS, California - Linda University
+                </p>
+              </a>
+            </div>
+          </div>
+          <div class="team-foot">
+            <div class="team-foot__button">
+              <a href="#!" class="team-foot__button--left">
+                <svg
+                  xmlns="http://www.w3.org/2000/svg"
+                  width="6"
+                  height="12"
+                  viewBox="0 0 6 12"
+                  fill="none"
+                >
+                  <path
+                    d="M5.5 1L0.5 6L5.5 11"
+                    stroke="currentColor"
+                    stroke-linecap="round"
+                    stroke-linejoin="round"
+                  />
+                </svg>
+              </a>
+            </div>
+            <div class="team-foot__button">
+              <a href="#!" class="team-foot__button--right">
+                <svg
+                  xmlns="http://www.w3.org/2000/svg"
+                  width="6"
+                  height="12"
+                  viewBox="0 0 6 12"
+                  fill="none"
+                >
+                  <path
+                    d="M0.5 1L5.5 6L0.5 11"
+                    stroke="currentColor"
+                    stroke-linecap="round"
+                    stroke-linejoin="round"
+                  />
+                </svg>
+              </a>
+            </div>
+          </div>
+        </div>
+      </section>
+      <section class="cta">
+        <div class="main-content">
+          <div class="cta-body">
+            <!-- CTA left -->
+            <figure class="cta-body__left">
+              <img src="./assets/img/cta-img.png" alt="" class="img-left" />
+            </figure>
+            <!-- CTA right -->
+            <section class="cta-content">
+              <h2 class="cta-content__heading section-heading">
+                Take back your smile with dentures
+              </h2>
+              <p class="cta-content__desc section-desc">
+                If you’re missing multiple teeth due to decay, injury, or the
+                natural aging process, dentures might be the perfect solution.
+              </p>
+              <div class="cta-content__badge">
+                <div class="cta-content__badege--google">
+                  <a href="#!" class="cta-content__active">
+                    <img src="./assets/img/cta-img2.1.png" alt="" />
+                  </a>
+                </div>
+                <div class="cta-content__badege--google">
+                  <a href="#!" class="cta-content__active">
+                    <img src="./assets/img/cta-img2.2.png" alt="" />
+                  </a>
+                </div>
+              </div>
+            </section>
+          </div>
+        </div>
+      </section>
+      <section class="blog">
+        <div class="main-content">
+          <div class="blog-body">
+            <!-- blog-left -->
+            <section class="blog-content">
+              <h2 class="blog-content__heading section-heading">
+                Read Latest News & Events.
+              </h2>
+              <a href="#!" class="blog-content__detail">Read All Blog</a>
+              <div class="team-foot blog-content__foot">
+                <div class="team-foot__button">
+                  <a href="#!" class="team-foot__button--left">
+                    <svg
+                      xmlns="http://www.w3.org/2000/svg"
+                      width="6"
+                      height="12"
+                      viewBox="0 0 6 12"
+                      fill="none"
+                    >
+                      <path
+                        d="M5.5 1L0.5 6L5.5 11"
+                        stroke="currentColor"
+                        stroke-linecap="round"
+                        stroke-linejoin="round"
+                      />
+                    </svg>
+                  </a>
+                </div>
+                <div class="team-foot__button">
+                  <a href="#!" class="team-foot__button--right">
+                    <svg
+                      xmlns="http://www.w3.org/2000/svg"
+                      width="6"
+                      height="12"
+                      viewBox="0 0 6 12"
+                      fill="none"
+                    >
+                      <path
+                        d="M0.5 1L5.5 6L0.5 11"
+                        stroke="currentColor"
+                        stroke-linecap="round"
+                        stroke-linejoin="round"
+                      />
+                    </svg>
+                  </a>
+                </div>
+              </div>
+            </section>
+            <!-- blog right -->
+            <div class="blog-media">
+              <div class="blog-item">
+                <div class="blog-item__1">
+                  <img
+                    src="./assets/img/blog1.png"
+                    alt=""
+                    class="blog-item__img"
+                  />
+                  <p class="blog-item__heading">
+                    Key Considerations for Regulatory Compliant.
+                  </p>
+                  <p class="blog-item__desc">
+                    It’s easy to think about medical care from a narrow
+                    perspective. You go to the hospital.
+                  </p>
+                  <a href="#!" class="blog-item__detail">Learn More</a>
+                </div>
+              </div>
+              <div class="blog-item">
+                <div class="blog-item__2">
+                  <img
+                    src="./assets/img/blog2.png"
+                    alt=""
+                    class="blog-item__img"
+                  />
+                  <p class="blog-item__heading">
+                    Key Considerations for Regulatory Compliant.
+                  </p>
+                  <p class="blog-item__desc">
+                    It’s easy to think about medical care from a narrow
+                    perspective. You go to the hospital.
+                  </p>
+                  <a href="#!" class="blog-item__detail">Learn More</a>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </section>
+      <section class="apt">
+        <div class="main-content">
+          <h2 class="apt-heading section-heading">
+            Always welcoming new patients
+          </h2>
+          <div class="apt-dash"></div>
+          <p class="apt-desc">
+            Take control of your dental health and get the personalized care you
+            deserve. Call (541) 772-8846 to schedule
+          </p>
+          <a href="#!" class="apt-bnt btn">Appointment</a>
+        </div>
+      </section>
     </main>
+    <!-- FOOTER -->
+    <section class="footer">
+      <div class="main-content">
+        <div class="footer-logo">
+          <a href="#!" class="logo">
+            <img src="./assets/img/logo.png" alt="" />
+            <p class="footer-logo__desc">
+              Exceptional dental care for all ages. Your great smile begins with
+              a great dentist.
+            </p>
+          </a>
+        </div>
+        <div class="support support1">
+          <ul>
+            <p class="support__heading">Support</p>
+            <li><p class="support__desc">Help center</p></li>
+            <li><p class="support__desc">Help center</p></li>
+            <li><p class="support__desc">Help center</p></li>
+            <li><p class="support__desc">Help center</p></li>
+          </ul>
+          <ul>
+            <p class="support__heading support__heading2">Support</p>
+            <li><p class="support__desc">Help center</p></li>
+            <li><p class="support__desc">Help center</p></li>
+          </ul>
+        </div>
+        <div class="support support2">
+          <ul>
+            <p class="support__heading">Support</p>
+            <li><p class="support__desc">Help center</p></li>
+            <li><p class="support__desc">Help center</p></li>
+          </ul>
+          <ul>
+            <p class="support__heading support__heading2">Support</p>
+            <li><p class="support__desc">Help center</p></li>
+          </ul>
+        </div>
+        <div class="social">
+          <p class="support__heading">Stay In Touch</p>
+          <div class="social-img">
+            <a href="" class="social-action">
+              <img src="./assets/img/footter1.png" alt="" class="social-icon" />
+            </a>
+            <a href="" class="social-action">
+              <img src="./assets/img/footter2.png" alt="" class="social-icon" />
+            </a>
+            <a href="" class="social-action">
+              <img src="./assets/img/footter3.png" alt="" class="social-icon" />
+            </a>
+          </div>
+          <p class="support__heading support__heading2">Subscribe</p>
+          <p class="support__desc">
+            Subscribe our newsletter for the latest update of Dental care
+          </p>
+          <div class="user-email">
+            <div class="mail-box">
+              <p class="support__desc email-desc">Enter your email...</p>
+            </div>
+
+            <a href="#!" class="btn subscribe__btn">Subscribe</a>
+          </div>
+        </div>
+      </div>
+      <div class="copyright">
+        <span class="footer-dash"></span>
+        <p class="support__desc">
+          2021 Đào Ngọc Việt Hoàng. Copyright and All rights reserved.
+        </p>
+      </div>
+    </section>
   </body>
 </html>
