--- a/index.html
+++ b/index.html
@@ -91,20 +91,22 @@
     <link rel="stylesheet" href="./assets/css/reset.css" />
     <!-- style css -->
     <link rel="stylesheet" href="./assets/css/style.css" />
+    <!-- ==reponsive== -->
+    <link rel="stylesheet" href="./assets/css/responsive.css" />
     <title>Figma3</title>
   </head>
-  <body style="height: ">
+  <body>
     <!-- head -->
     <header class="header">
       <div class="main-content">
         <div class="header-top">
           <!-- LOGO -->
-          <a href="#!" class="logo">
+          <a href="#!" class="header__logo">
             <img src="./assets/img/logo.png" alt="" />
           </a>
           <!-- NAVBAR -->
           <nav class="navbar">
-            <ul class="nav__list">
+            <ul class="nav__list" id="nav__list--pc">
               <li class="nav__item">
                 <a href="#!" class="nav__item--link nav__item--link-active"
                   >Home</a
@@ -160,6 +162,74 @@
         </section>
       </div>
     </header>
+    <!-- tablet mobile header -->
+    <div class="mobile-header">
+      <!-- tablet mobile menu -->
+      <input
+        type="checkbox"
+        name="menu-checkbox"
+        class="menu-checkbox"
+        id="menu-checkbox"
+        hidden
+      />
+      <label for="menu-checkbox">
+        <svg
+          class="menu-header__icon"
+          xmlns="http://www.w3.org/2000/svg"
+          viewBox="0 0 448 512"
+        >
+          <path
+            fill="white"
+            d="M0 96C0 78.3 14.3 64 32 64H416c17.7 0 32 14.3 32 32s-14.3 32-32 32H32C14.3 128 0 113.7 0 96zM0 256c0-17.7 14.3-32 32-32H416c17.7 0 32 14.3 32 32s-14.3 32-32 32H32c-17.7 0-32-14.3-32-32zM448 416c0 17.7-14.3 32-32 32H32c-17.7 0-32-14.3-32-32s14.3-32 32-32H416c17.7 0 32 14.3 32 32z"
+          />
+        </svg>
+      </label>
+
+      <!-- ==overlay== -->
+      <label for="menu-checkbox" class="menu-overlay"></label>
+      <!-- menu-content -->
+      <div class="menu-drawer">
+        <!-- menu-top -->
+        <div class="menu-drawer__top">
+          <!-- ===close menu -->
+          <label for="menu-checkbox">
+            <svg
+              class="menu__close"
+              xmlns="http://www.w3.org/2000/svg"
+              viewBox="0 0 512 512"
+            >
+              <path
+                fill="currentColor"
+                d="M256 512A256 256 0 1 0 256 0a256 256 0 1 0 0 512zM175 175c9.4-9.4 24.6-9.4 33.9 0l47 47 47-47c9.4-9.4 24.6-9.4 33.9 0s9.4 24.6 0 33.9l-47 47 47 47c9.4 9.4 9.4 24.6 0 33.9s-24.6 9.4-33.9 0l-47-47-47 47c-9.4 9.4-24.6 9.4-33.9 0s-9.4-24.6 0-33.9l47-47-47-47c-9.4-9.4-9.4-24.6 0-33.9z"
+              />
+            </svg>
+          </label>
+          <!-- ==logo== -->
+          <a href="#!" class="">
+            <img src="./assets/img/logo.png" alt="" />
+          </a>
+        </div>
+        <!-- nav mobile -->
+        <ul id="nav__list--mobile"></ul>
+        <script>
+          const navPC = document.querySelector("#nav__list--pc");
+          const navMobile = document.querySelector("#nav__list--mobile");
+          // sao chep
+          navMobile.innerHTML = navPC.innerHTML;
+        </script>
+        <!-- separate ngăn cách -->
+        <div class="separate"></div>
+        <!-- login -->
+       <div class="show-on-mobile">
+          <li class="nav__item" id="nav__list--mobile">
+            <a href="#!" class="nav__item--link">Login</a>
+          </li>
+          <li class="nav__item" id="nav__list--mobile">
+            <a href="#!" class="nav__item--link">SignUp</a>
+          </li>
+       </div>
+      </div>
+    </div>
     <!-- MAIN -->
     <main class="main">
       <!-- service -->
